--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <!--Plotly.js files-->
     <script src="https://cdn.plot.ly/plotly-2.9.0.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
-
     <title>My basic html site</title>
 </head>
 
 <body>
+    <div id="header">
+        <h1>hello I've styled some of the code very nice</h1>
+    </div>
+
     <div id="myPlot" style="width:100%; height:60%;"></div>
+
 
 <!--Scripts-->
 <!--script type="text/javascript" src="js/plotly.js"></script-->
-
 <script type="text/javascript" src="js/plotlyLocalCsv.js"></script>
 
 </body>
